Update to Java 17 and make use of new apis.